--- a/resources/public/css/index.css
+++ b/resources/public/css/index.css
@@ -6,21 +6,15 @@
     float: left;
 }
 #variables { 
-    height: 60%;
+    height: 40%;
     display: inline-block;
-    margin: 20px;
     overflow: auto;
-}
-#variables table {
-    border-collapse:collapse;
-}
-#variables table, td, th {
-    border:1px solid black;
 }
 #comparison {
     float: left;
-    height: 40%;
+    height: 50%;
     width: 60%;
+    display: inline-block;
 }
 #compare {
 
