search bar and variable ordering

--- a/war-resources/css/index.css
+++ b/war-resources/css/index.css
@@ -10,6 +10,10 @@
     margin-top: 50px;
     float: left;
 }
+#search-form {
+   margin-top: 50px;
+   float: right;
+}
 #bottom {
     clear: both;
 }
